--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   <link rel="stylesheet" type="text/css" href="fonts.css">
   <link rel="stylesheet" type="text/css" href="global.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
-  <!DOCTYPE html>
-<html lang="en">
   <title>API Integration</title>
 </head>
 
@@ -18,7 +16,7 @@
   <!-- Heading for the Page -->
   <header class="header-container">
     <h1>Weather API Integration</h1>
-    <h2>Display weather information using WeatherStack API</h2>
+    <h2>Display weather information using WeatherAPI</h2>
   </header>
   
   <section class="option-1">
@@ -26,10 +24,10 @@
       <h2>Option 1</h2>
       <p>Use a dropdown to change the API endpoint or data</p>
       <select id="dropdown" class="dropdown">
-        <option name="Calgary" value="http://api.weatherstack.com/current?access_key=ae30c1eb933d2855177641014ad3cbf0&query=Calgary">Calgary</option>
-        <option name="Edmonton" value="http://api.weatherstack.com/current?access_key=ae30c1eb933d2855177641014ad3cbf0&query=Edmonton">Edmonton</option>
-        <option name="Toronto" value="http://api.weatherstack.com/current?access_key=ae30c1eb933d2855177641014ad3cbf0&query=Toronto">Toronto</option>
-        <option name="New York" value="http://api.weatherstack.com/current?access_key=ae30c1eb933d2855177641014ad3cbf0&query=New York">New York</option>
+        <option value="Calgary">Calgary</option>
+        <option value="Edmonton">Edmonton</option>
+        <option value="Toronto">Toronto</option>
+        <option value="New York">New York</option>
       </select>
       <button id="submit-button" class="button">Get Weather</button>
     </div>
@@ -42,3 +40,4 @@
 </body>
 
 </html>
+
