added inital css image assets

--- a/index.html
+++ b/index.html
@@ -13,15 +13,19 @@
 </head>
 
 <body>
-  <!-- Heading for the Page -->
-  <header class="header-container">
-    <h1>Weather API Integration</h1>
-    <h2>Display weather information using WeatherAPI</h2>
-  </header>
-  
+  <!-- Heading for the Page --><header>
+        <section class="hero-banner">
+          <div class="hero-image">
+              <img src="styles/assets/hero-image.jpg" alt="line graphs" class="responsive">
+          </div>
+          <div class="hero-text">
+              <h1>Weather API Integration <i class="fa-solid fa-fire" style="color: #d3fcd5;"></i></h1>
+              <p>Displaying weather information using WeatherAPI</p>
+          </div>
+      </section>
   <section class="option-1">
     <div class="option-container">
-      <h2>Option 1</h2>
+      <h2>Find Your Current Weather</h2>
       <p>Use a dropdown to change the API endpoint or data</p>
       <select id="dropdown" class="dropdown">
         <option value="Calgary">Calgary</option>
